--- a/app/views/selectedRestaurants.scala.html
+++ b/app/views/selectedRestaurants.scala.html
@@ -9,9 +9,11 @@
         <div class="col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
             <style type="text/css">
                 body {
-                padding-top: 30px;
-                padding-left:20px;
-                background-color: #eee4e1;
+	                padding-top: 30px;
+	                padding-left:20px;
+	                background-color: #F3E1C3;
+					font-family:Calibri;
+					font-size: 14pt;
                 }
             </style>
             <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
