database with json

--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -9,9 +9,7 @@
                     body {
                         padding-top: 30px;
                         padding-left:20px;
-                        background-color: #F3E1C3;
-						font-family:Calibri;
-						font-size: 14pt;
+                        background-color: #eee4e1;
                     }
                 </style>
                 <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
