i woas ned was i gmacht hob

--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -1,11 +1,18 @@
 
 @main("Cult and Dine") {
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
     <div class="container-fluid">
         <div class="row ">
             <div class="col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
-            <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
+                <style type="text/css">
+                    body {
+                        padding-top: 30px;
+                        padding-left:20px;
+                        background-color: #eee4e1;
+                    }
+                </style>
+                <h1><strong><center> Welcome to Cult and Dine </center> </strong></h1>
                 <h4><center><i><b> We provide the simplest way to dine and see culture in Vienna</b></i></center><h4> 
                 <br><br><br><br>
                 <h4>Search for the events on your Vienna Trip:</h4>
@@ -15,34 +22,9 @@
                      <button type="events" name="events" action=/events>Search for events</button>
                 </form><br>
                 <h4>Search for the restaurants on your Vienna Trip:</h4>
-                
                 <form method="GET" action=/restaurants>
-                    <select class="form-control">
-                      <option>Mariahilf</option>
-                      <option>Landstraße</option>
-                      <option>Innere Stadt</option>
-                      <option>Josefstadt</option>
-                      <option>Margarten</option>
-                      <option>Ottakring</option>
-                      <option>Neubau</option>
-                      <option>Döbling</option>
-                      <option>Alsergrund</option>
-                      <option>Rudolfsheim-Fünfhaus</option>
-                      <option>Hietzing</option>
-                      <option>Floridsdorf</option>
-                      <option>Donaustadt</option>
-                      <option>Hernals</option>
-                      <option>Brigittenau</option>
-                      <option>Währing</option>
-                      <option>Wieden, Freihausviertel</option>
-                      <option>Wieden</option>
-                      <option>Penzing</option>
-                      <option>Favoriten</option>
-                      <option>Meidling</option>
-                      <option>Leopoldstadt, Wiener Prater</option>
-                      <option>Alsergrund</option>
-                      <option>Liesing</option>
-                    </select>
+                    Startdate: <input type="text" name="dateStart" id=3 action=/restaurants > <br>
+                    Enddate: <input type="text" name="dateEnd" id=4 action=/restaurants > <br>
                      <button type="restaurants" name="restaurants" action=/restaurants>Search for restaurants</button>
                 </form><br>
                 <br>
