fixed the encription problem

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("Welcome to Play") {
-
+	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1>
     @play20.welcome(message, style = "Java")
 
 }
