--- a/app/views/selectedRestaurants.scala.html
+++ b/app/views/selectedRestaurants.scala.html
@@ -2,6 +2,7 @@
 @(restau: util.List[Restaurants])
 
 @main("Cult and Dine") {
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1>
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
 <div class="container-fluid">
