--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -1,5 +1,6 @@
 
 @main("Cult and Dine") {
+	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap.min.css")">
     <div class="container-fluid">
@@ -24,32 +25,32 @@
                 <h4>Search for the restaurants on your Vienna Trip:</h4>
                 <form method="GET" action=/restaurants>
                      <select class="form-control">
-+                      <option>Mariahilf</option>
-+                      <option>Landstraße</option>
-+                      <option>Innere Stadt</option>
-+                      <option>Josefstadt</option>
-+                      <option>Margarten</option>
-+                      <option>Ottakring</option>
-+                      <option>Neubau</option>
-+                      <option>Döbling</option>
-+                      <option>Alsergrund</option>
-+                      <option>Rudolfsheim-Fünfhaus</option>
-+                      <option>Hietzing</option>
-+                      <option>Floridsdorf</option>
-+                      <option>Donaustadt</option>
-+                      <option>Hernals</option>
-+                      <option>Brigittenau</option>
-+                      <option>Währing</option>
-+                      <option>Wieden, Freihausviertel</option>
-+                      <option>Wieden</option>
-+                      <option>Penzing</option>
-+                      <option>Favoriten</option>
-+                      <option>Meidling</option>
-+                      <option>Leopoldstadt, Wiener Prater</option>
-+                      <option>Alsergrund</option>
-+                      <option>Liesing</option>
-+                    </select>
-                     <button type="restaurants" name="restaurants" action=/restaurants>Search for restaurants</button>
+                      <option>Mariahilf</option>
+                      <option>Landstra&szlig;e</option>
+                      <option>Innere Stadt</option>
+                      <option>Josefstadt</option>
+                      <option>Margarten</option>
+                      <option>Ottakring</option>
+                      <option>Neubau</option>
+                      <option>D&ouml;bling</option>
+                      <option>Alsergrund</option>
+                      <option>Rudolfsheim-F&uuml;nfhaus</option>
+                      <option>Hietzing</option>
+                      <option>Floridsdorf</option>
+                      <option>Donaustadt</option>
+                      <option>Hernals</option>
+                      <option>Brigittenau</option>
+                      <option>W&auml;hring</option>
+                      <option>Wieden, Freihausviertel</option>
+                      <option>Wieden</option>
+                      <option>Penzing</option>
+                      <option>Favoriten</option>
+                      <option>Meidling</option>
+                      <option>Leopoldstadt, Wiener Prater</option>
+                      <option>Alsergrund</option>
+                      <option>Liesing</option>
+                    </select>
+                    <button type="restaurants" name="restaurants" action=/restaurants>Search for restaurants</button>
                 </form><br>
                 <br>
             </div>
