--- a/app/views/selectedEvents.scala.html
+++ b/app/views/selectedEvents.scala.html
@@ -5,6 +5,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
+    
+    	<!-- add responsive button design -->
+    	<div class="btn-group" role="group" aria-label="...">
+		  <button type="button" class="btn btn-defaut btn-xl btn-link">Home</button>
+		</div>
     <div class="container-fluid">
         <div class="row ">
             <div class="col-lg-2 col-md-3 col-md-4 col-md-6 col-md-8 col-md-12">
@@ -14,9 +19,9 @@
                      <br>
                     <table class="table"> 
                             <tr>
-                                    <th>Title</th>
-                                    <th>Category </th>  
-                                    <th>Description </th> 
+                                    <th>Title <br> <hr> </th>
+                                    <th>Category <br> <hr> </th>  
+                                    <th>Description <br> <hr> </th> 
                             </tr>
                             <tbody>
                             @for(event:Events <-event){
