--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -18,30 +18,30 @@
                 <h4>Search for the restaurants on your Vienna Trip:</h4>
                 <form method="GET" action=/restaurants>
                      <select class="form-control">
-                      <option>Mariahilf</option>
-                      <option>Landstra&szlig;e</option>
-                      <option>Innere Stadt</option>
-                      <option>Josefstadt</option>
-                      <option>Margarten</option>
-                      <option>Ottakring</option>
-                      <option>Neubau</option>
-                      <option>D&ouml;bling</option>
-                      <option>Alsergrund</option>
-                      <option>Rudolfsheim-F&uuml;nfhaus</option>
-                      <option>Hietzing</option>
-                      <option>Floridsdorf</option>
-                      <option>Donaustadt</option>
-                      <option>Hernals</option>
-                      <option>Brigittenau</option>
-                      <option>W&auml;hring</option>
-                      <option>Wieden, Freihausviertel</option>
-                      <option>Wieden</option>
-                      <option>Penzing</option>
-                      <option>Favoriten</option>
-                      <option>Meidling</option>
-                      <option>Leopoldstadt, Wiener Prater</option>
-                      <option>Alsergrund</option>
-                      <option>Liesing</option>
+                      <option name="selection">Mariahilf</option>
+                      <option name="selection">Landstra&szlig;e</option>
+                      <option name="selection">Innere Stadt</option>
+                      <option name="selection">Josefstadt</option>
+                      <option name="selection">Margarten</option>
+                      <option name="selection">Ottakring</option>
+                      <option name="selection">Neubau</option>
+                      <option name="selection">D&ouml;bling</option>
+                      <option name="selection">Alsergrund</option>
+                      <option name="selection">Rudolfsheim-F&uuml;nfhaus</option>
+                      <option name="selection">Hietzing</option>
+                      <option name="selection">Floridsdorf</option>
+                      <option name="selection">Donaustadt</option>
+                      <option name="selection">Hernals</option>
+                      <option name="selection">Brigittenau</option>
+                      <option name="selection">W&auml;hring</option>
+                      <option name="selection">Wieden, Freihausviertel</option>
+                      <option name="selection">Wieden</option>
+                      <option name="selection">Penzing</option>
+                      <option name="selection">Favoriten</option>
+                      <option name="selection">Meidling</option>
+                      <option name="selection">Leopoldstadt, Wiener Prater</option>
+                      <option name="selection">Alsergrund</option>
+                      <option name="selection">Liesing</option>
                     </select>
                     <button type="restaurants" name="restaurants" action=/restaurants>Search for restaurants</button>
                 </form><br>
