--- a/app/views/selectedEvents.scala.html
+++ b/app/views/selectedEvents.scala.html
@@ -8,7 +8,7 @@
     
     	<!-- add responsive button design -->
     	<div class="btn-group" role="group" aria-label="...">
-		  <button type="button" class="btn btn-defaut btn-xl btn-link">Home</button>
+		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
     <div class="container-fluid">
         <div class="row ">
@@ -19,13 +19,16 @@
                      <br>
                     <table class="table"> 
                             <tr>
+                            		<th><br><hr></th>
                                     <th>Title <br> <hr> </th>
                                     <th>Category <br> <hr> </th>  
                                     <th>Description <br> <hr> </th> 
                             </tr>
                             <tbody>
                             @for(event:Events <-event){
-                             <tr>
+                             <tr>     
+                             		<!-- add form to got to the website with the selected event - add according new view -->
+                             		<td><input type="radio" name="selection" autocomplete="off" aria-label="..."></td>			
                                     <td>@event.getTitle</td>
                                     <td>@event.getCategory</td>
                                     <td>@event.getDescription</td>
