added routes to the new views

--- a/app/views/selectedEvents.scala.html
+++ b/app/views/selectedEvents.scala.html
@@ -37,6 +37,7 @@
                             </tbody>
                     </table>
                     <br><br><br><br><br>
+                    <a href="/thisEvent"> <button type="restaurants" name="restaurants" action=/thisEvent>Start</button> </a>
             </div>
         </div>
     </div>
