--- a/app/views/selectedRestaurants.scala.html
+++ b/app/views/selectedRestaurants.scala.html
@@ -42,8 +42,9 @@
                         }
                         </tbody>
                     </table>
-
+					<a href="/thisone"> <button type="restaurants" name="restaurants" action=/thisone>Start</button></a>
                     <br><br>
+                    
             </div>
         </div>
     </div>
