added google map view and code (doesn't work yet)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,3 +11,10 @@
     font-size: 16pt;
     border-radius: 8px;
 }
+
+#googleMaps {
+	width: 500px;
+	height: 380px;
+	position: absolute;
+	right: 20px;
+}
