--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -1,4 +1,5 @@
 @main("Cult and Dine") {
+<head>
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap/bootstrap.min.css")">
@@ -6,4 +7,21 @@
     <div class="btn-group" role="group" aria-label="...">
 		<a href="/home" > <button type="button" class="btn btn-defaut btn-xl">Home</button></a>
 		</div>
+		<!-- key=AIzaSyDVGIonPsFY9X03uVDndvXKmg0xOEuSyHk -->
+	<script src="http://maps.googleapis.com/maps/api/js?"></script> 
+	<script>
+		function initialize() {
+			var mapProp = {
+				center:new google.maps.LatLng(51.508742, -0.120850),
+				zoon: 5,
+				mapTypeId: google.maps.MapTypeId.TERRAIN
+			};
+			var map = new google.maps.Map(document.getElementById("googleMaps"), mapProp);
+		}
+		google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
+</head>
+<body>
+	<div id="googleMaps"></div>
+</body>
 }
