tried to fix the dropdown selection

--- a/app/views/start.scala.html
+++ b/app/views/start.scala.html
@@ -16,19 +16,19 @@
                      <button type="events" name="events" action=/events>Search for events</button>
                 </form><br>
                 <h4>Search for the restaurants on your Vienna Trip:</h4>
-                <form method="GET" action=/restaurants>
+                <form method="POST" action=/restaurants>
                      <select class="form-control">
-                      <option name="selection">Mariahilf</option>
-                      <option name="selection">Landstra&szlig;e</option>
-                      <option name="selection">Innere Stadt</option>
-                      <option name="selection">Josefstadt</option>
-                      <option name="selection">Margarten</option>
-                      <option name="selection">Ottakring</option>
-                      <option name="selection">Neubau</option>
-                      <option name="selection">D&ouml;bling</option>
-                      <option name="selection">Alsergrund</option>
-                      <option name="selection">Rudolfsheim-F&uuml;nfhaus</option>
-                      <option name="selection">Hietzing</option>
+                      <option name="selection" value="mariahilf">Mariahilf</option>
+                      <option name="selection" value="landstrasse">Landstra&szlig;e</option>
+                      <option name="selection" value="innereStadt>Innere Stadt</option>
+                      <option name="selection" value="Josefstadt>Josefstadt</option>
+                      <option name="selection" value="margarten>Margarten</option>
+                      <option name="selection" value="ottakring">Ottakring</option>
+                      <option name="selection" value="neubau">Neubau</option>
+                      <option name="selection" value="doebling">D&ouml;bling</option>
+                      <option name="selection" value="alsergrund">Alsergrund</option>
+                      <option name="selection" value="rudolfsheim">Rudolfsheim-F&uuml;nfhaus</option>
+                      <option name="selection" value="hietzing">Hietzing</option>
                       <option name="selection">Floridsdorf</option>
                       <option name="selection">Donaustadt</option>
                       <option name="selection">Hernals</option>
