Revert "changed events site"
This reverts commit 5e20e087278f9fae3f232155e1a21c0a7ee41be8.

--- a/app/views/selectedEvents.scala.html
+++ b/app/views/selectedEvents.scala.html
@@ -21,10 +21,8 @@
                             <tr>
                             		<th><br><hr></th>
                                     <th>Title <br> <hr> </th>
-                                    <th>Category <br> <hr> </th> 
+                                    <th>Category <br> <hr> </th>  
                                     <th>Description <br> <hr> </th> 
-                               
-                                    
                             </tr>
                             <tbody>
                             @for(event:Events <-event){
@@ -33,9 +31,7 @@
                              		<td><input type="radio" name="selection" autocomplete="off" aria-label="..."></td>			
                                     <td>@event.getTitle</td>
                                     <td>@event.getCategory</td>
-                                    <td>@event.getOrganizer</td>
-                                    
-                               
+                                    <td>@event.getDescription</td>
                             </tr>
                             }
                             </tbody>
