changed description to organizer

--- a/app/views/selectedEvents.scala.html
+++ b/app/views/selectedEvents.scala.html
@@ -31,7 +31,7 @@
                              		<td><input type="radio" name="selection" autocomplete="off" aria-label="..."></td>			
                                     <td>@event.getTitle</td>
                                     <td>@event.getCategory</td>
-                                    <td>@event.getDescription</td>
+                                    <td>@event.getOrganizer</td>
                             </tr>
                             }
                             </tbody>
