--- a/app/views/restaurant.scala.html
+++ b/app/views/restaurant.scala.html
@@ -14,9 +14,20 @@
                 <h4><center><i><b> We provide the simplest way to dine and see culture in Vienna</b></i></center><h4> 
                 <br><br><br><br>
                 <br>
-                
-                		
+          
+          Name: @res.getName <br>
+          Category: @res.getCategory <br>
+          Priceclass: @res.getPriceclass <br>
+          Tel.: @res.getPhoneNumber <br>
+          Adress: @res.getAdress
 	
+		<br><br><br><br><br><br>
+	
+		<form method="GET" action=/events>
+                    Startdate: <input type="text" name="dateStart" id=3 action=/events > <br>
+                    Enddate: <input type="text" name="dateEnd" id=4 action=/events > <br>
+                     <button type="events" name="events" action=/events>Search for events</button>
+                </form><br>
 	
 	</div>	
     }
