added hyperlink to restaurants

--- a/app/views/restaurant.scala.html
+++ b/app/views/restaurant.scala.html
@@ -17,7 +17,7 @@
           
           Name: @res.getName <br>
           Category: @res.getCategory <br>
-          Priceclass: @res.getPriceclass <br>
+          Priceclass: @res.getPriceClass <br>
           Tel.: @res.getPhoneNumber <br>
           Adress: @res.getAdress
 	
